# semester2

TSP/tsp2019/: CMakeLists.txt  sample.cpp
fpga/counter/: clockdown.vhd  count.vhd  counter.vhd  decoder.vhd  tb_count.vhd
fpga/first_/: high3.vhd  kadai1  kadai1.vhd
fpga/first_/kadai1/: decoder.vhd  decoder.vhd.bak  high3.vhd  kadai1.qpf  kadai1.qsf
fpga/first_/kadai1/db/: kadai1.(0).cnf.cdb  kadai1.(0).cnf.hdb  kadai1.(1).cnf.cdb  kadai1.(1).cnf.hdb  kadai1.(2).cnf.cdb  kadai1.(2).cnf.hdb  kadai1.asm.qmsg  kadai1.asm.rdb  kadai1.cbx.xml  kadai1.cmp.bpm  kadai1.cmp.cdb  kadai1.cmp.hdb  kadai1.cmp.idb  kadai1.cmp.logdb  kadai1.cmp.rdb  kadai1.db_info  kadai1.eda.qmsg  kadai1.fit.qmsg  kadai1.hier_info  kadai1.hif  kadai1.lpc.html  kadai1.lpc.rdb  kadai1.lpc.txt  kadai1.map.bpm  kadai1.map.cdb  kadai1.map.hdb  kadai1.map.kpt  kadai1.map.qmsg  kadai1.map.rdb  kadai1.map_bb.cdb  kadai1.map_bb.hdb  kadai1.pre_map.hdb  kadai1.routing.rdb  kadai1.rtlv.hdb  kadai1.rtlv_sg.cdb  kadai1.rtlv_sg_swap.cdb  kadai1.sta.qmsg  kadai1.sta.rdb  kadai1.sta_cmp.7_slow_1100mv_85c.tdb  kadai1.tiscmp.fast_1100mv_0c.ddb  (+7 more)
fpga/first_/kadai1/incremental_db/compiled_partitions/: kadai1.db_info  kadai1.root_partition.cmp.ammdb  kadai1.root_partition.cmp.cdb  kadai1.root_partition.cmp.hdb  (+11 more)
fpga/first_/kadai1/output_files/: kadai1.asm.rpt  kadai1.done  kadai1.eda.rpt  kadai1.fit.rpt  kadai1.fit.summary  kadai1.flow.rpt  kadai1.jdi  kadai1.map.rpt  kadai1.map.summary  kadai1.pin  kadai1.sof  kadai1.sta.rpt
fpga/task/: clockdown.vhd  decoder.vhd  rand.vhd  result.vhd  role.vhd  roulette.vhd
(+2 files in other folders)
